--- a/src/index.html
+++ b/src/index.html
@@ -5,26 +5,34 @@
   </head>
 <body>
   <header><h1>Se remonta?</h1></header>
+    <article id="context">
     <p>
       Usa esta calculadora para saber si puedes (o no) pasar una materia con las notas que tienes.
-      <br>
-      Uso:
-      <br>
-      Introduce la nota maxima en la caja donde se indica, representa la nota maxima que puedes sacr en los examenes.
-      <br>
-      Introduce la nota minima para aprobar en la caja donde se indica, representa la nota minima que necesitas para aprobar la materia.
-      <br>
-      Puedes colocar la nota que sacaste en un examen junto al porcentaje que el mismo representa, si no lo has presentado lo puedes dejar vacio sin embargo, <strong>debes</strong> colocar el porcentaje.
-
-      
     </p>
-  <form>
+      <h2>Como usar:</h2>
+      <ul>
+        <li>
+          Introduce la nota maxima en la caja donde se indica, representa la nota maxima que puedes sacar en los examenes.
+        </li>
+        <li>
+          Introduce la nota minima para aprobar en la caja donde se indica, representa la nota minima que necesitas para aprobar la materia.
+        </li>
+        <li>
+          Puedes colocar la nota que sacaste en un examen junto al porcentaje que el mismo representa, si no lo has presentado lo puedes dejar vacio sin embargo, <strong>debes</strong> colocar el porcentaje.
+        </li>
+      </ul>
+    </article>
+  <form id="form">
       <h2>Datos aqui:</h2>
       <div>
-      <label for="nota_maxima">Nota maxima:</label>
-      <input required type="number" step="0.01" name="nota_maxima" id = "nota_maxima" placeholder="20"/>
-      <label for="nota_min_aprobatoria">Nota minima para aprobar:</label>
-      <input required type="number" step="0.01" name="nota_min_aprobatoria" id="nota_min_aprobatoria" placeholder="9.5"/>
+        <span>
+          <label for="nota_maxima">Nota maxima:</label>
+          <input required type="number" step="0.01" name="nota_maxima" id = "nota_maxima" placeholder="20" min='0'/>
+        </span>
+        <span>
+          <label for="nota_min_aprobatoria">Nota minima para aprobar:</label>
+          <input required type="number" step="0.01" name="nota_min_aprobatoria" id="nota_min_aprobatoria" placeholder="9.5" min='0'/>
+        </span>
       </div>
       <table id = "table">
         <thead>
@@ -35,10 +43,10 @@
         </thead>
         <tr id = "tr">
           <th scope="row">
-            <input type="number" step="0.01" name="nota" placeholder="Nota que sacaste"/>
+            <input type="number" step="0.01" name="nota" placeholder="Nota que sacaste" min='0'/>
           </th>
           <th>
-            <input required type="number" step="0.01" name="porcentaje" placeholder="Porcentaje de la evaluacion"/>
+            <input required type="number" step="0.01" name="porcentaje" placeholder="Porcentaje de la evaluacion" min='0'/>
           </th>
         </tr>
       </table>
@@ -47,14 +55,21 @@
         <button type="button" id = "elim">x</button>
         <button type="button" id="agg">+</button>
       </span>
-      <button id="calcular" type="button">Calcular</button>
+      <button id="calcular" type="submit">Calcular</button>
     </form>
+    <div id="loader">      <span style="--i:1"></span>
+      <span style="--i:2"></span>
+      <span style="--i:3"></span>
+</div>
     <section  id="mensaje">
+
       <h2></h2>
+      <img id="gif" >
       <button id="close" type="button">Cerrar</button>
     </section>
     <div id="canPassTables">
     </div>
+
   </body>
   <script defer src="/scripts/index.js" ></script>
 </html>
