--- a/src/index.html
+++ b/src/index.html
@@ -55,7 +55,7 @@
         <button type="button" id = "elim">x</button>
         <button type="button" id="agg">+</button>
       </span>
-      <button id="calcular" type="submit">Calcular</button>
+      <button id="calcular" >Calcular</button>
     </form>
     <div id="loader">      <span style="--i:1"></span>
       <span style="--i:2"></span>
